@@ -1,3 +1,8 @@
+2009-05-06  Dodji Seketeli  <dodji@redhat.com>
+
+	PR c++/17395
+	* g++.dg/template/call7.C: New test.
+
 2009-05-06  H.J. Lu  <hongjiu.lu@intel.com>
 
 	Backport from mainline:
